--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
    "C_Cpp_Runner.includeSearch": ["*", "**/*"],
    "C_Cpp_Runner.excludeSearch": ["**/build", "**/build/**", "**/.*", "**/.*/**", "**/.vscode", "**/.vscode/**"],
    "C_Cpp_Runner.useAddressSanitizer": false,
-   "C_Cpp.errorSquiggles": "disabled"
+   "C_Cpp.errorSquiggles": "disabled",
+   "cmake.configureOnOpen": false
 }
